--- a/f2h2h1.github.io/_draft.html
+++ b/f2h2h1.github.io/_draft.html
@@ -952,6 +952,95 @@ vscode的使用技巧
                 code serve-web --port 8888
                 好像是每个端口都会新建一套配置？
                 好像没法设置密码，但可以通过http代理设置的吧
+                    当前版本 Visual Studio Code 1.100.2 ，必须用 https 或者是 127.0.0.1 ，因为前端会用到这个api Crypto.subtle ，但这个api只能在https下使用
+                        https://github.com/microsoft/vscode/issues/191276#issuecomment-1693701864
+                        https://developer.mozilla.org/en-US/docs/Web/API/Crypto/subtle
+                    使用 apache 作为代理，用 摘要认证 ，需要这些启用模块
+                        mod_auth_digest mod_authn_core mod_authn_file mod_authz_core mod_ssl mod_proxy mod_proxy_http mod_proxy_connect mod_proxy_wstunnel mod_rewrite
+                    &lt;VirtualHost localhost-vscode.com:80&gt;
+
+                        ServerAdmin webmaster@dummy-host.example.com
+                        DocumentRoot "${SRVROOT}/htdocs"
+                        ServerName localhost-vscode.com
+                        ServerAlias localhost-vscode.com
+
+                        RewriteEngine On
+                        RewriteCond          "%{HTTPS}" "!=on"
+                        RewriteRule ^/?(.*)$ https://%{HTTP_HOST}/$1 [L,R=302]
+
+                    &lt;/VirtualHost&gt;
+                    &lt;VirtualHost localhost-vscode.com:443&gt;
+
+                        ServerAdmin webmaster@dummy-host.example.com
+                        DocumentRoot "${SRVROOT}/htdocs"
+                        ServerName localhost-vscode.com
+                        ServerAlias localhost-vscode.com
+
+                        SSLEngine on
+                        SSLCertificateFile "${SRVROOT}/conf/ssl/localhost-vscode.com/localhost-vscode.com.crt"
+                        SSLCertificateKeyFile "${SRVROOT}/conf/ssl/localhost-vscode.com/localhost-vscode.com.pem"
+                        SSLProtocol -all +TLSv1.3 +TLSv1.2
+                        Protocols h2 h2c http/1.1 acme-tls/1 http/1.0
+
+                        # &lt;Location "/"&gt;
+                        #     # AddDefaultCharset UTF-8 # 默认字符集为 UTF-8
+                        #     # 禁止使用 .htaccess 文件来覆盖当前目录下的 Apache 设置
+                        #     AllowOverride None
+                        #     # Indexes：当没有 index.html 等默认文件时显示目录列表。FollowSymLinks：允许跟随符号链接。
+                        #     Options Indexes FollowSymLinks
+                        # 
+                        #     # 基本认证对话框中显示的提示信息
+                        #     AuthName "用户名"
+                        #     # 认证类型为 HTTP Basic 认证
+                        #     AuthType Basic
+                        #     # 指定用户密码文件的位置
+                        #     # AuthUserFile .passwd
+                        #     AuthUserFile "${SRVROOT}/.passwd"
+                        #     # AuthBasicFake demo demopass
+                        #     # 要求访问者必须提供有效的用户名和密码
+                        #     Require valid-user
+                        # &lt;/Location&gt;
+
+                        &lt;Location "/"&gt;
+                            # AddDefaultCharset UTF-8 # 默认字符集为 UTF-8
+                            # 禁止使用 .htaccess 文件来覆盖当前目录下的 Apache 设置
+                            AllowOverride None
+                            # Indexes：当没有 index.html 等默认文件时显示目录列表。FollowSymLinks：允许跟随符号链接。
+                            Options Indexes FollowSymLinks
+
+                            # 基本认证对话框中显示的提示信息
+                            AuthName "username"
+                            # 认证类型为 HTTP Digest 认证
+                            # "http://localhost-auth-digest.com/"
+                            AuthType Digest
+                            # AuthDigestDomain "/" "http://localhost-auth-digest.com/"
+                            # AuthDigestDomain "/private/" "http://mirror.my.dom/private2/"
+                            AuthDigestDomain "/"
+                            AuthDigestProvider file
+                            AuthUserFile "./.digest_pw"
+                            # 要求访问者必须提供有效的用户名和密码
+                            Require valid-user
+                        &lt;/Location&gt;
+
+                        RewriteEngine on
+                        RewriteCond %{HTTP:Upgrade} websocket [NC]
+                        RewriteCond %{HTTP:Connection} upgrade [NC]
+                        RewriteRule ^/?(.*) ws://localhost:8000/$1 [P,L]
+
+                        ProxyPreserveHost On
+                        # 将客户端请求转发到后端服务器
+                        ProxyPass / http://localhost:8000/
+                        # 将后端服务器返回的 URL 地址替换成前端域名地址，防止暴露内部地址
+                        ProxyPassReverse / http://localhost:8000/
+
+                        &lt;IfModule dir_module&gt;
+                            DirectoryIndex index.html index.php
+                        &lt;/IfModule&gt;
+
+                        ErrorLog "logs/localhost-vscode.com-error.log"
+                        CustomLog "logs/localhost-vscode.com-access.log" common
+
+                    &lt;/VirtualHost&gt;
             https://github.com/coder/code-server
             https://github.com/gitpod-io/openvscode-server
         直接访问 vscode.dev 也可以编辑本地文件
@@ -1812,12 +1901,14 @@ vscode的使用技巧
                     兼容一部分 sendmail 的命令
 如何实现一个搜索引擎？
     搜索引擎的原理
-        倒排索引
+        分词（word segmentation）
+        倒排索引（Inverted index）
         Lucene
             solr
             elasticsearch
         sphinx
         mysql的全文搜索
+        BM25算法
 客户端的动画？
     动画是如何实现的？
         js
@@ -2304,6 +2395,7 @@ KiB 和 KB 和 Kb 和 Kbps 的联系与区别
             电磁 电气 的区别？
             电磁 简单但不严谨地理解 就是 无线信号 就是 电磁波
             电气 简单但不严谨地理解 就是 有线信号 就是 电流的高低电平
+                那么 光纤 算电气信号还是电磁信号？
             信号 -&gt; 传输介质的变化？
 如何做一个npm库
     去npm官方文档注册账号,并验证邮箱 官网地址:https://www.npmjs.com/
@@ -4397,6 +4489,10 @@ leetcode做题的一般套路
     traditional AI 传统AI
         predictive AI 预测式AI
     generative AI 生成式AI
+    可能用到的语言或工具
+        Python R Julia Fortran SQL
+        Spyder Jupyter RStudio
+        Excel Octave MATLAB Mathematica SAS SPSS
     相关的职业
         数据科学家（Data scientist）
             数据科学家分析复杂的数字数据，帮助企业做出决策。
@@ -4529,7 +4625,7 @@ leetcode做题的一般套路
             注意力机制（Attention Mechanism）
                 自注意力机制（Self Attention Mechanism）
             ReAct (Reasoning and Acting) 推理和执行
-            LangChain 和 LangGraph
+            LangChain 和 LangGraph 和 langsmith
         满血版&gt;满血版量化&gt;蒸馏版&gt;量化版(蒸馏量化版)
             满血就是没经过改动的
             量化就是可以运行在内存里的
@@ -4629,10 +4725,11 @@ leetcode做题的一般套路
             梁见后 超微电脑（Super Micro Computer） 主要是做服务器的
             梁文峰
     相关的框架
-        Torch
-        TensorFlow
-        Keras
-        sklearn 这个主要用于学习
+        python的库
+            Torch
+            TensorFlow
+            Keras
+            sklearn 这个主要用于学习
         ML.NET
         Apache SINGA
         Apache Spark MLlib
@@ -5633,6 +5730,9 @@ wordpress
     监听路由的变化
     匹配路由并渲染对应的内容
     放行不匹配的路由
+windiows里的各种常用软件
+    邮件 音频播放器 视频播放器 图片浏览器
+    微软出品的 不是微软出品但也大量装机的
 如何用一条命令关闭windows的屏幕
     这一句只能运行在 cmd 里
         powershell (Add-Type '[DllImport(\"user32.dll\")]^public static extern int SendMessage(int hWnd, int hMsg, int wParam, int lParam);' -Name a -Pas)::SendMessage(-1,0x0112,0xF170,2)
@@ -5843,7 +5943,7 @@ nas
         网络
             内网穿透 和 动态代理
         应用
-            网盘
+            网盘 (File-hosting service, cloud-storage service, online file-storage provider, cyberlocker)
             笔记
     硬件
         就普通的服务器，然后再加上 ups
@@ -6150,6 +6250,18 @@ nas
     物质本质上是 能量
     时间 和 空间 可以合并为 时空
     所以 物理的 本质 是 能量 和 时空
+    基本粒子
+        费米子 玻色子 快子
+    基本力
+        电磁力 弱力 强力 引力
+    弱电统一理论
+        电磁力 弱力
+    大一统理论
+        电磁力 弱力 强力
+    万有理论
+        电磁力 弱力 强力 引力
+    相对论 -&gt; 宇宙学标准模型
+    量子物理 -&gt; 粒子物理学标准模型
     数学和物理的交汇点在于数学为物理提供了一种语言和工具，以描述和预测自然现象。
     物理学和化学的交汇点主要在于它们都研究物质的基本组成和性质，但从不同的角度和尺度进行。物理学关注的是物质的基本粒子和力的规律，而化学则专注于物质的化学性质和反应。
     化学和生物学的交汇点在于它们共同探索生命过程中的分子机制。这一领域被称为生物化学，它研究生物体内发生的化学反应
@@ -7142,12 +7254,23 @@ Hello what what is the first thing, and I am am scq000.
     CT Communication Technology 通信技术
     IT Information Technology 信息技术
     ICT Information Communication Technology 信息通信技术
-    电子科学与技术
-    微电子科学与工程
+    Electronic Information Engineering 电子信息工程
+    Electronic science and technology 电子科学与技术
+    Microelectronics Science and Engineering 微电子 微电子科学与工程
     通信 通讯 电信 电讯 这几个有什么关系和区别？
         电信 -&gt; 电子通信
         电讯 -&gt; 电子通讯
+        通信 Communication
+        电信 Telecommunication
+        Communication 沟通交流
+        Telecommunication 是指通过 电报 电话 网络等技术进行的通信
+        Communication 包含 Telecommunication
+        communication 可同时对应“通信”和“通讯”，但中文需根据语境区分
     机器 机构 机械 零件 这几个有什么关系和区别？
+        零件（Part） → 机构（Mechanism） → 机器（Machine）
+            零件是基础，多个零件组成机构，多个机构组合成机器
+                例如，汽车（机器）包含发动机（机构）、传动系统（机构），而发动机由活塞、连杆、曲轴（零件）组成
+        机械（Machinery/Mechanical） 是更高层次的概念，涵盖机器、机构、零件及相关技术
     科学 技术 工程 这几个有什么关系和区别？
         科学活动是以发现为核心
         技术活动是以发明为核心
@@ -7159,7 +7282,7 @@ Hello what what is the first thing, and I am am scq000.
             eSTEM 开头的小写e是 English 的意思
     强电 和 弱电
         强电 和 电线 电路 供电 相关的
-        弱电 和 电相关的，需要供电的设备
+        弱电 和 电相关的，需要供电的设备，例如 电话 网络 监控
         电气工程 电力工程 算 强电
         电子工程 信息工程这些 算 弱电
     英文
@@ -7175,6 +7298,13 @@ Hello what what is the first thing, and I am am scq000.
         electric 和 electrical 都是形容词
         electric 和电气强相关 物体确实有电流通过 例如 电灯 electric light
         electrical 和电气弱相关 例如 电气工程 Electrical Engineering
+        embedded
+            adj. 植入的 深入的 内含的
+            v. 把...嵌入，埋入 embed 的过去式和过去分词
+        IC Integrated Circuit 集成 电路
+        circuit 
+            n. 电路 线路 巡回 环行 环行路线
+            v. 巡回
         communication 通讯
         telecommunication 电信
         telegraph 电报
@@ -7184,6 +7314,17 @@ Hello what what is the first thing, and I am am scq000.
         Technology n. 技术
         Engineering n. 工程
         Science and Technology n. 科技 科学和技术
+    电子（electric） 数码（digital） 互联网（Internet）
+        电子 19世纪末
+        数码 20世纪80年代
+        互联网 20世纪70年代，90年代才开始流行
+        电子 通常有一个 e 前缀
+        数码 通常有一个 d 或 digi 前缀
+        互联网 通常有一个 i 前缀
+        数字技术（Digital Technology）
+            从 模拟信号 转换成 数字信号
+            处理 数字信号
+        数码 数字 数位 都是 digital 的翻译
     三论
         旧三论
             系统论
