--- a/f2h2h1.github.io/定时任务.html
+++ b/f2h2h1.github.io/定时任务.html
@@ -286,6 +286,24 @@ Register-ScheduledTask -User System -TaskName "SoftwareScan" -Trigger (New-Sched
 <ul>
 <li>mysql 的事件调度器 (Event Scheduler)</li>
 <li>PostgreSQL 的 PgAgent 也能实现定时任务</li>
+<li>apache 的 mod_watchdog 和 mod_proxy_hcheck 模块配合使用也可以达到类似定时任务的效果<ul>
+<li>需要先启用这几个模块<ul>
+<li>mod_lbmethod_byrequests</li>
+<li>mod_slotmem_shm</li>
+<li>mod_watchdog</li>
+<li>mod_proxy</li>
+<li>mod_proxy_balancer</li>
+<li>mod_proxy_hcheck</li>
+</ul>
+</li>
+<li>在配置文件里加上这样一段，通常是加在 VirtualHost 里<pre><code>  # 每30秒访问一次 http://127.0.0.1:80/mycron.php
+  &lt;Proxy "balancer://mycron"&gt;
+      BalancerMember "http://127.0.0.1:80"  hcmethod=GET hcuri=/mycron.php hcinterval=30
+  &lt;/Proxy&gt;
+</code></pre>
+</li>
+</ul>
+</li>
 </ul>
 &lt;!--
 
