--- a/index.html
+++ b/index.html
@@ -6,12 +6,32 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 54 个博客、9057 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 54 个博客、9067 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=informal.top/LLM%20fine-tune%20experience.html>2025-06-23 LLM fine-tune experience</a></li>
+
+<li><a href=young-lord.github.io/%E4%BD%BF%E7%94%A8%E7%A1%AC%E4%BB%B6%E5%AF%86%E9%92%A5%E8%A7%A3%E9%94%81%20KeePass%20%E6%95%B0%E6%8D%AE%E5%BA%93.html>2025-06-22 使用硬件密钥解锁 KeePass 数据库</a></li>
+
+<li><a href=informal.top/Papers%20I%20readed%20recently%20about%20LLM%20application.html>2025-06-22 Papers I readed recently about LLM application</a></li>
+
+<li><a href=yuanj.top/matrix%20%E2%80%93%20a%20glow%20of%20ideas.html>2025-06-21 matrix – a glow of ideas</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202524%202025%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%B5%9B%E8%AE%B0%20%E4%B8%8A.html>2025-06-20 折返点 2524 2025 隧道马赛记 上</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%82%BC%E5%BF%B5%20Fred.html>2025-06-18 悼念 Fred</a></li>
+
+<li><a href=yuanj.top/Hyper-V%E4%BD%93%E9%AA%8C%E8%BF%98%E7%AE%97%E8%89%AF%E5%A5%BD.html>2025-06-17 Hyper-V体验还算良好</a></li>
+
+<li><a href=yuanj.top/%E5%86%8D%E8%A7%81%E4%BA%86%EF%BC%8C%E7%9B%9B%E5%A4%8F.html>2025-06-16 再见了，盛夏</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202523%20%E6%A3%92%E7%90%83%E5%B0%8F%E8%81%94%E7%9B%9F%E7%BB%93%E8%90%A5%E5%92%8C%E6%9C%9F%E6%9C%AB%E8%A1%A8%E6%BC%94.html>2025-06-13 父范学堂 2523 棒球小联盟结营和期末表演</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202523%20%E8%AE%AD%E7%BB%83%E7%AC%AC%2018%20%E5%91%A8%EF%BC%8C%E6%9C%80%E5%90%8E%E4%B8%80%E5%91%A8%E7%9A%84%E8%AE%AD%E7%BB%83%E4%BC%91%E6%95%B4.html>2025-06-13 折返点 2523 训练第 18 周，最后一周的训练休整</a></li>
 
 <li><a href=codeinchinese.com/%E7%94%A8%E6%9C%88%E5%85%94%E8%AF%AD%E8%A8%80%E7%BC%96%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97%E2%80%94%E2%80%94%E5%87%BA%E5%B8%88%E6%9C%AA%E6%8D%B7.mbt.html>2025-06-13 用月兔语言编写猜数字——出师未捷.mbt</a></li>
 
@@ -22,8 +42,6 @@
 <li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%95%E5%88%A4%E6%96%AD%E4%BD%A0%E7%9C%9F%E6%AD%A3%E6%8B%A5%E6%9C%89%E4%BA%86%E4%B8%AA%E4%BA%BA%E7%94%9F%E4%BA%A7%E5%8A%9B%EF%BC%9F.html>2025-06-10 如何判断你真正拥有了个人生产力？</a></li>
 
 <li><a href=babyno.top/%E3%80%8C%E5%A2%A8%E6%8E%A2%E3%80%8D%E6%98%AF%E5%A6%82%E4%BD%95%E4%BD%BF%E7%94%A8%E6%8F%92%E4%BB%B6%E6%9C%BA%E5%88%B6%E6%9E%84%E5%BB%BA%E5%8F%AF%E6%89%A9%E5%B1%95%E6%9E%B6%E6%9E%84%E7%9A%84.html>2025-06-09 「墨探」是如何使用插件机制构建可扩展架构的</a></li>
-
-<li><a href=yuanj.top/Matrix%20%E2%80%93%20a%20glow%20of%20ideas.html>2025-06-06 Matrix – a glow of ideas</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E9%A9%AC%E6%8B%89%E6%9D%BE%E6%AF%94%E8%B5%9B%E6%97%A5%E8%A3%85%E5%A4%87%E6%B8%85%E5%8D%95.html>2025-06-06 马拉松比赛日装备清单</a></li>
 
@@ -73,7 +91,7 @@
 
 <li><a href=informal.top/GRPO.html>2025-05-20 GRPO</a></li>
 
-<li><a href=yuanj.top/%E6%9C%88%E5%88%8A%20vol.2%EF%BC%9A%E7%94%9F%E5%91%BD%E7%9A%84%E4%B8%A4%E9%9D%A2%E9%95%9C.html>2025-05-19 月刊 vol.2：生命的两面镜</a></li>
+<li><a href=yuanj.top/%E7%94%9F%E5%91%BD%E7%9A%84%E4%B8%A4%E9%9D%A2%E9%95%9C.html>2025-05-19 生命的两面镜</a></li>
 
 <li><a href=codeinchinese.com/%E9%99%B6%E5%93%B2%E8%BD%A9%E7%9A%84%E4%B8%8D%E7%AD%89%E5%BC%8F%E8%AF%81%E6%98%8E%E5%B7%A5%E5%85%B7%E5%BD%93%E5%89%8D%E7%89%88%E6%8E%A2%E7%A9%B6.html>2025-05-17 陶哲轩的不等式证明工具当前版探究</a></li>
 
@@ -165,7 +183,7 @@
 
 <li><a href=lhasa.icu/%E8%AE%B0%E5%BD%95%E6%88%91%E7%9A%84%E5%89%8D3%E6%AC%A1%E8%B7%91%E6%AD%A5%EF%BC%9A%E4%BB%8E%E9%99%AA%E8%B7%91%E5%88%B0%E4%B8%BB%E5%8A%A8%E5%87%BA%E5%8F%91.html>2025-04-20 记录我的前3次跑步：从陪跑到主动出发</a></li>
 
-<li><a href=yuanj.top/%E6%9C%88%E5%88%8A%20vol.1%EF%BC%9A%E7%BB%93%E6%9D%9F%E4%B8%8E%E5%BC%80%E5%A7%8B.html>2025-04-20 月刊 vol.1：结束与开始</a></li>
+<li><a href=yuanj.top/%E7%BB%93%E6%9D%9F%E4%B8%8E%E5%BC%80%E5%A7%8B.html>2025-04-20 结束与开始</a></li>
 
 <li><a href=informal.top/Weekly-%2326%20AI%20Application.html>2025-04-20 Weekly-#26 AI Application</a></li>
 
@@ -18040,6 +18058,8 @@
 <li><a href=kexizeroing.github.io/Build%20an%20agent%20from%20scratch.html>Mar 22 202 Build an agent from scratch</a></li>
 
 <li><a href=kexizeroing.github.io/A%20basic%20Dockerfile%20and%20Intro%20to%20Kubernetes.html>Mar 12 202 A basic Dockerfile and Intro to Kubernetes</a></li>
+
+<li><a href=kexizeroing.github.io/Chrome%20built-in%20AI.html>Jun 21 202 Chrome built-in AI</a></li>
 
 <li><a href=kexizeroing.github.io/Git%20knowledge%20that%20not%20clear%20to%20me.html>Jun 19 202 Git knowledge that not clear to me</a></li>
 
