--- a/informal.top/GRPO.html
+++ b/informal.top/GRPO.html
@@ -5,7 +5,7 @@
 <p><img alt="GRPO Iteration" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/informal.top/images/2025/0520-01.png"/>{: width="800"}</p>
 <ul>
 <li>for each input, generator <code>G</code> outputs</li>
-<li>for each output, calculate logits_prob for each token in current, old, reference mdoel</li>
+<li>for each output, calculate logits_prob for each token in current, old, reference model </li>
 <li>calcualte objective value as loss </li>
 <li>update old model in each step </li>
 <li>update reference model in each epoch </li>
@@ -29,6 +29,9 @@
 <li><code>num_iterations</code> Numbers of iteration per batch, GRPO iterations times in <code>Algorithm 1 picture</code>, similar with LR</li>
 <li><code>epsilon</code> for both clip lower_bound and upper_bound </li>
 <li><code>epsilon_high</code> repalce <code>epsilon</code> for clip upper_bound when exist</li>
+<li><code>sync_ref_model</code> bool, whether to Whether to synchronize the reference model with the active model every <code>ref_model_sync_steps</code> steps, using the <code>ref_model_mixup_alpha</code> parameter</li>
+<li><code>ref_model_mixup_alpha</code> float, default 0.6, <code>π_ref = α * π_θ + (1 - α) * π_ref_prev</code></li>
+<li><code>ref_model_sync_steps</code> int, default 512, To use this parameter, you must set sync_ref_model=True.</li>
 </ul>
 <h2>FAQ</h2>
 <p>Q: How to cold start?</p>
