--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -87,6 +87,7 @@
 <p>Hypertext TV shared schedule for the web: <a href="https://hypertext.tv">https://hypertext.tv</a></p>
 <p>Desktop environment in the browser: <a href="https://github.com/DustinBrett/daedalOS">https://github.com/DustinBrett/daedalOS</a></p>
 <p>The avatar library you've always been looking for: <a href="https://www.dicebear.com">https://www.dicebear.com</a></p>
+<p>Universal visualizer and analyzer for JavaScript and CSS: <a href="https://sonda.dev">https://sonda.dev</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Defensive CSS - writing CSS that is protected: <a href="https://ishadeed.com/article/defensive-css">https://ishadeed.com/article/defensive-css</a></p>
@@ -276,8 +277,7 @@
 <p>Quickly get started with building applications using the Anthropic API: <a href="https://github.com/anthropics/anthropic-quickstarts">https://github.com/anthropics/anthropic-quickstarts</a></p>
 <p>Find the best cursor rules for your framework and language: <a href="https://cursor.directory">https://cursor.directory</a></p>
 <p>React Components for AI Chat: <a href="https://github.com/Yonom/assistant-ui">https://github.com/Yonom/assistant-ui</a></p>
-<p>Introducing the Realtime API: <a href="https://openai.com/index/introducing-the-realtime-api">https://openai.com/index/introducing-the-realtime-api</a></p>
-<p>Realtime API updates — WebRTC: <a href="https://platform.openai.com/docs/guides/realtime-webrtc">https://platform.openai.com/docs/guides/realtime-webrtc</a></p>
+<p>OpenAI Realtime API updates: <a href="https://platform.openai.com/docs/guides/realtime">https://platform.openai.com/docs/guides/realtime</a></p>
 <p>Audio input and output for the OpenAI Chat Completion API: <a href="https://simonwillison.net/2024/Oct/18/openai-audio">https://simonwillison.net/2024/Oct/18/openai-audio</a></p>
 <p>AI-powered search engine that is an open source alternative to Perplexity AI: <a href="https://github.com/ItzCrazyKns/Perplexica">https://github.com/ItzCrazyKns/Perplexica</a></p>
 <p>For LLMs to better code with Jina API: <a href="https://github.com/jina-ai/meta-prompt">https://github.com/jina-ai/meta-prompt</a></p>
@@ -304,6 +304,8 @@
 <p>CLI for interacting with MCP servers: <a href="https://github.com/f/mcptools">https://github.com/f/mcptools</a></p>
 <p>Real-time conversational AI models run locally: <a href="https://huggingface.co/spaces/webml-community/conversational-webgpu">https://huggingface.co/spaces/webml-community/conversational-webgpu</a></p>
 <p>Cloudflare Workers AI: <a href="https://playground.ai.cloudflare.com">https://playground.ai.cloudflare.com</a></p>
+<p>An open-source database of AI models: <a href="https://models.dev">https://models.dev</a></p>
+<p>The AI browser automation framework: <a href="https://www.stagehand.dev">https://www.stagehand.dev</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Stanford CS229 Machine Learning: <a href="https://cs229.stanford.edu">https://cs229.stanford.edu</a></p>
@@ -320,3 +322,4 @@
 <p>Visual explanations of core machine learning concepts: <a href="https://mlu-explain.github.io">https://mlu-explain.github.io</a></p>
 <p>Learning material for Artificial Intelligence: <a href="https://aman.ai">https://aman.ai</a></p>
 <p>Understanding Large Language Model by Under The Hood: <a href="https://www.youtube.com/playlist?list=PLUfbC589u-FSwnqsvTHXVcgmLg8UnbIy3">https://www.youtube.com/playlist?list=PLUfbC589u-FSwnqsvTHXVcgmLg8UnbIy3</a></p>
+<p>Neural Networks Zero to Hero: <a href="https://www.youtube.com/playlist?list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ">https://www.youtube.com/playlist?list=PLAqhIrjkxbuWI23v9cThsA9GvCAUhRvKZ</a></p>
