--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -285,6 +285,28 @@ html {
 });
 </code></pre>
 <ul>
+<li>Instead of hardcoding a specific value inside our keyframe definition, we can access a CSS variable. With a little help from <code>calc</code>, we can flip that value to its negative counterpart, so that we can oscillate to/from a dynamic value.</li>
+</ul>
+<pre><code class="lang-html">&lt;style&gt;
+  @keyframes oscillate {
+    from {
+      transform: translateX(calc(var(--amount) * -1));
+    }
+    to {
+      transform: translateX(var(--amount));
+    }
+  }
+  .ball {
+    animation: oscillate 1000ms infinite alternate;
+  }
+&lt;/style&gt;
+
+&lt;div class="ball" style="--amount: 8px"&gt;&lt;/div&gt;
+&lt;div class="ball" style="--amount: 16px"&gt;&lt;/div&gt;
+&lt;div class="ball" style="--amount: 32px"&gt;&lt;/div&gt;
+&lt;div class="ball" style="--amount: 64px"&gt;&lt;/div&gt;
+</code></pre>
+<ul>
 <li>CSS background image on background color.</li>
 </ul>
 <pre><code class="lang-css">{
