--- a/kexizeroing.github.io/Explore running code in browser.html
+++ b/kexizeroing.github.io/Explore running code in browser.html
@@ -14,7 +14,21 @@ const response = await fetch("https://pokeapi.co/api/v2/pokemon/ditto");
 const data = await response.json();
 console.log(data);
 &lt;/script&gt;<p>&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/blog-cells@0.4.1/dist/blog-cells.css" /&gt;</p>
-&lt;script type="module" src="https://cdn.jsdelivr.net/npm/blog-cells@0.4.1/dist/blog-cells.js"&gt;&lt;/script&gt;<h2>Notes on running code online in browser</h2>
+&lt;script type="module" src="https://cdn.jsdelivr.net/npm/blog-cells@0.4.1/dist/blog-cells.js"&gt;&lt;/script&gt;<h2><code>&lt;syntax-highlight&gt;</code> element</h2>
+<p>Syntax Highlighting custom element uses the CSS Custom Highlight API for syntax highlighting.</p>
+<pre><code class="lang-html">&lt;script type="module" src="https://cdn.jsdelivr.net/npm/syntax-highlight-element/+esm"&gt;&lt;/script&gt;
+&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/syntax-highlight-element/dist/themes/prettylights.min.css"&gt;
+
+&lt;syntax-highlight language="js"&gt;
+  const greeting = "Hello, World!";
+  console.log(greeting);
+&lt;/syntax-highlight&gt;
+</code></pre>
+<ul>
+<li><a href="https://andreruffert.github.io/syntax-highlight-element">https://andreruffert.github.io/syntax-highlight-element</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API">https://developer.mozilla.org/en-US/docs/Web/API/CSS_Custom_Highlight_API</a></li>
+</ul>
+<h2>Notes on running code online in browser</h2>
 <p>JSX isn't natively understood by browsers, so we need to transform it into regular JavaScript. This is typically done using Babel. In this case, we're using <code>@babel/standalone</code>, which is a browser version of Babel.</p>
 <blockquote><p>If you're using Babel in production, you should normally not use <code>@babel/standalone</code>. Instead, you should use a build system running on Node.js, such as Webpack, Rollup, or Parcel, to transpile your JS ahead of time.</p>
 </blockquote>
