--- a/kexizeroing.github.io/JavaScript basics you should know.html
+++ b/kexizeroing.github.io/JavaScript basics you should know.html
@@ -883,6 +883,61 @@ calc.next();    // {value: 5, done: false}
 calc.next(7);   // {value: 14, done: false}
 calc.next(100); // {value: 14000, done: true}
 </code></pre>
+<h3>Iterator helper methods</h3>
+<p>The new proposal introduces a collection of new methods on the Iterator prototype, to allow general usage and consumption of iterators. All of the iterator-producing methods in this proposal are <strong>lazy</strong>. They will only consume the iterator when they need the next item from it.</p>
+<pre><code class="lang-js">function* naturals() {
+  let i = 0;
+  while (true) {
+    yield i;
+    i += 1;
+  }
+}
+
+const result = naturals()
+  .map(value =&gt; {
+    return value * value;
+  });
+result.next(); //  {value: 0, done: false};
+result.next(); //  {value: 1, done: false};
+result.next(); //  {value: 4, done: false};
+
+const result = naturals()
+  .filter(value =&gt; {
+    return value % 2 == 0;
+  });
+result.next(); //  {value: 0, done: false};
+result.next(); //  {value: 2, done: false};
+
+const result = naturals()
+  .take(3);
+result.next(); //  {value: 0, done: false};
+result.next(); //  {value: 1, done: false};
+result.next(); //  {value: 2, done: false};
+result.next(); //  {value: undefined, done: true};
+
+const result = naturals()
+  .drop(3);
+result.next(); //  {value: 3, done: false};
+result.next(); //  {value: 4, done: false};
+
+const result = naturals()
+  .take(5)
+  .reduce((sum, value) =&gt; {
+    return sum + value;
+  }, 3);
+
+result // 13
+
+const result = naturals()
+  .take(5)
+  .toArray();
+
+result // [0, 1, 2, 3, 4]
+
+// To find the first element in an iterator that matches.
+// Can be used without `take` on infinite iterators.
+naturals().find(v =&gt; v &gt; 1); // 2
+</code></pre>
 <h2>Promise</h2>
 <p>A <code>Promise</code> is a proxy for a value not necessarily known when the promise is created. The Promise object represents the eventual completion or failure of an asynchronous operation and its success value or failure reason. Instead of immediately returning the final value, the asynchronous method returns a promise to supply the value at some point in the future.</p>
 <p>A Promise is in one of these states: <code>pending</code>, <code>fulfilled</code>, <code>rejected</code>. A promise is said to be <code>settled</code> if it is either fulfilled or rejected, but not pending. A pending promise can either be fulfilled with a value or rejected with an error. When either of these options happens, the associated handlers queued up by a promise's <code>then</code> method are called. Note that <strong>promises are guaranteed to be asynchronous</strong>, so an action for an already "settled" promise will occur only after the stack has cleared and a clock-tick has passed. <strong>Promise executor functions should not be async</strong> (Don't do any awaiting inside the Promise constructor).</p>
