--- a/kexizeroing.github.io/Node.js learning notes.html
+++ b/kexizeroing.github.io/Node.js learning notes.html
@@ -8,7 +8,7 @@
 <li>In Node.js you control the environment. This means that you can write all the modern ES2015+ JavaScript that your Node.js version supports.</li>
 <li>Node.js supports both the CommonJS and ES module systems, while in the browser, we are starting to see the ES Modules standard being implemented.</li>
 </ul>
-<p>Undici is an HTTP client library that powers the fetch API in Node.js. It was written from scratch and does not rely on the built-in HTTP client in Node.js. It includes a number of features that make it a good choice for high-performance applications.</p>
+<p><a href="https://undici.nodejs.org">Undici</a> is an HTTP client library that powers the fetch API in Node.js. It was written from scratch and does not rely on the built-in HTTP client in Node.js. It includes a number of features that make it a good choice for high-performance applications.</p>
 <blockquote><p>Undici means eleven in Italian <em>(1.1 -&gt; 11 -&gt; Eleven -&gt; Undici)</em>. Undici is a replacement for <code>http.request</code> because we could not improve <code>http.request</code> without breaking everybody.</p>
 </blockquote>
 <p>Since Node.js v21, the WebSocket API has been enhanced using the Undici library, introducing a built-in WebSocket client. This simplifies real-time communication for Node.js applications. In Node.js v22.4.0 release, the WebSocket API was marked as stable, indicating it's ready for production use.</p>
