--- a/kexizeroing.github.io/Notes on Model Context Protocol.html
+++ b/kexizeroing.github.io/Notes on Model Context Protocol.html
@@ -20,6 +20,7 @@
 &lt;-- final answer ---
 </code></pre>
 <blockquote><p>How similar is this to tool calling? Tool calling lets LLMs invoke functions to interact with the real world, typically within the same process. MCP enables tool execution in a separate process, either locally or remotely, fully decoupling the server from the client.</p>
+<p>Most MCP servers work "locally" (over a mechanism called <code>stdio</code>): you download a copy of the source code and run the code on your own computer. Servers rely on a command line tool either <code>npx</code> or <code>uvx</code> to download and run the server's code on your local machine.</p>
 </blockquote>
 <h3>MCP server and client</h3>
 <p>MCP uses a client-server design where applications can connect to multiple resources.</p>
@@ -142,8 +143,6 @@ claude mcp list
 claude
 # Actually run Claude Code
 </code></pre>
-<blockquote><p>Most MCP servers work "locally" (over a mechanism called <code>stdio</code>): you download a copy of the source code and run the code on your own computer. Servers rely on a command line tool either <code>npx</code> or <code>uvx</code> to download and run the server's code on your local machine. With both <code>npx</code> and <code>uvx</code> working, you're ready to use MCP servers with Claude Desktop.</p>
-</blockquote>
 <h3>AI SDK MCP clients</h3>
 <p>The SDK supports connecting to MCP servers via either stdio (for local tools) or SSE (for remote servers). Once connected, you can use MCP tools directly with the AI SDK. The client exposes a <code>tools</code> method for retrieving tools from a MCP server.</p>
 <pre><code class="lang-js">import { experimental_createMCPClient as createMCPClient } from 'ai';
@@ -188,6 +187,12 @@ You can purchase a product by using the purchase tool.
 Until now, support for MCP was limited to Claude Desktop through local servers. Today, we're introducing Integrations, allowing Claude to work seamlessly with remote MCP servers across the web and desktop apps. Developers can build and host servers that enhance Claude’s capabilities, while users can discover and connect any number of these to Claude.</p>
 <p>What this means is that you can bring your own remote MCP server to claude.ai. Users just need a URL to equip the LLM with new tools and capabilities.</p>
 </blockquote>
+<h3>Your API is not an MCP</h3>
+<ol>
+<li>LLMs are terrible at selection from a long list of tools.</li>
+<li>Your existing API descriptions are probably not ready for LLM consumption. Writing for LLM is different than writing for humans.</li>
+<li>APIs are designed for resource management, not for humans. LLMs are human-like.</li>
+</ol>
 <h3>References and further reading</h3>
 <ul>
 <li><a href="https://github.com/modelcontextprotocol/typescript-sdk">https://github.com/modelcontextprotocol/typescript-sdk</a></li>
@@ -198,8 +203,7 @@ Until now, support for MCP was limited to Claude Desktop through local servers. 
 <li><a href="https://glama.ai/mcp/servers">https://glama.ai/mcp/servers</a></li>
 <li><a href="https://www.pulsemcp.com">https://www.pulsemcp.com</a></li>
 <li><a href="https://github.com/github/github-mcp-server">https://github.com/github/github-mcp-server</a></li>
-<li><a href="https://github.com/invariantlabs-ai/mcp-scan">https://github.com/invariantlabs-ai/mcp-scan</a></li>
 <li><a href="https://github.com/modelcontextprotocol/inspector">https://github.com/modelcontextprotocol/inspector</a></li>
-<li><a href="https://www.youtube.com/watch?v=eD0uBLr-eP8">https://www.youtube.com/watch?v=eD0uBLr-eP8</a></li>
 <li><a href="https://github.com/vercel-labs/mcp-for-next.js">https://github.com/vercel-labs/mcp-for-next.js</a></li>
+<li><a href="https://github.com/punkpeye/fastmcp">https://github.com/punkpeye/fastmcp</a></li>
 </ul>
