--- a/kexizeroing.github.io/Understand npm concepts.html
+++ b/kexizeroing.github.io/Understand npm concepts.html
@@ -295,6 +295,8 @@ packages:
 {
   "name": "awesome-monorepo",
   "scripts": {
+    "dev": "pnpm run -r --parallel --aggregate-output dev",
+    // "build": "pnpm run -r build",
     "build": "pnpm --filter=@awesome/* run build",
     "clean": "rimraf 'packages/*/{dist,node_modules}' &amp;&amp; rimraf node_modules",
   }
@@ -338,12 +340,6 @@ pnpm add -Dw typescript @types/node eslint
 # Add React to a package
 pnpm add react react-dom --filter @awesome/api-client
 
-# Add multiple packages to multiple filters
-pnpm add lodash --filter @awesome/utils --filter @awesome/api-client
-
-# Install to all packages matching pattern
-pnpm add dayjs --filter "@awesome/*"
-
 # Add @awesome/utils as dependency to @awesome/api-client
 pnpm add @awesome/utils --filter @awesome/api-client
 
@@ -352,6 +348,7 @@ pnpm add @awesome/utils@workspace:* --filter @awesome/api-client
 </code></pre>
 <blockquote><p>There is not much difference between <code>pnpm add</code> and <code>pnpm install</code>. We use <code>pnpm add</code> when we want to add a new dependency; We use <code>pnpm install</code> when we have an existing project with the lockfile and we want to install all dependencies from the lockfile. The only difference is that <code>pnpm add</code> will fail when executed without args. <code>pnpm install</code> will work in both cases.</p>
 <p>You can run all of your <code>package.json</code> scripts via <code>pnpm &lt;script-name&gt;</code>. You can also run your installed binaries with <code>pnpm &lt;command&gt;</code>. For example, you might want to run local versions of Typescript (<code>pnpm tsc</code>) or eslint (<code>pnpm eslint</code>). npm uses a separate command (<code>npx</code>) to run binaries.</p>
+<p><code>pnpm dlx</code> (<code>pnpx</code> is an alias for <code>pnpm dlx</code>) fetches a package from the registry without installing it as a dependency, hotloads it, and runs whatever default command binary it exposes. e.g. <code>pnpm dlx create-vue my-app</code></p>
 </blockquote>
 <h3>npm scripts</h3>
 <p>npm scripts are a set of built-in and custom scripts defined in the <code>package.json</code> file. Their goal is to provide a simple way to execute repetitive tasks.</p>
