--- a/qubeijun.github.io/小贝壳疫苗计划.html
+++ b/qubeijun.github.io/小贝壳疫苗计划.html
@@ -88,16 +88,16 @@
       &lt;td id="sjs-H11" align="center"&gt;&lt;span&gt;&lt;input type="checkbox" checked&gt;&lt;/span&gt;&lt;/td&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
-      &lt;td id="sjs-D12"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-D12"&gt;&lt;span&gt;2025-01-06（周一）&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-E12" bgcolor="#C3EAD5"&gt;&lt;span&gt;五轮3/3&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-F12"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-F12"&gt;&lt;span&gt;自&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-G12"&gt;&lt;span&gt;（32周前）喝完5轮第三剂之后约14天之后的13价&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-H12" align="center"&gt;&lt;span&gt;&lt;input type="checkbox"&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-H12" align="center"&gt;&lt;span&gt;&lt;input type="checkbox" checked&gt;&lt;/span&gt;&lt;/td&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
       &lt;td id="sjs-B13"&gt;&lt;span&gt;5月龄&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-C13"&gt;&lt;span&gt;2024-12-20（周五）&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-D13"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-D13"&gt;&lt;span&gt;不打&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-E13" bgcolor="#FFEEAE"&gt;&lt;span&gt;十三1/4&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-F13"&gt;&lt;span&gt;自&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-G13"&gt;&lt;span&gt;开针 一岁前打完第1-3 一岁后打第4针 开针后按照系统排序预约接种 打全程&lt;/span&gt;&lt;/td&gt;
@@ -106,24 +106,24 @@
     &lt;tr&gt;
       &lt;td rowspan="2" id="sjs-B14"&gt;&lt;span&gt;6月龄&lt;/span&gt;&lt;/td&gt;
       &lt;td rowspan="2" id="sjs-C14"&gt;&lt;span&gt;2025-01-20（周一）&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-D14"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-D14"&gt;&lt;span&gt;2025-02-26（周三）&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-E14" bgcolor="#C6CAD3"&gt;&lt;span&gt;乙肝3/3&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-F14"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-G14"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-H14" align="center"&gt;&lt;span&gt;&lt;input type="checkbox"&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-H14" align="center"&gt;&lt;span&gt;&lt;input type="checkbox" checked&gt;&lt;/span&gt;&lt;/td&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
-      &lt;td id="sjs-D15"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-E15"&gt;&lt;span&gt;135流脑1/2&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-D15"&gt;&lt;span&gt;2025-02-10（周一）&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-E15"&gt;&lt;span&gt;ac流脑1/2&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-F15"&gt;&lt;span&gt;自&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-G15"&gt;&lt;span&gt;ac流脑 acyw135流脑 一个两种疾病 一个四种疾病&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-H15" align="center"&gt;&lt;span&gt;&lt;input type="checkbox"&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-H15" align="center"&gt;&lt;span&gt;&lt;input type="checkbox" checked&gt;&lt;/span&gt;&lt;/td&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
       &lt;td id="sjs-B16"&gt;&lt;span&gt;7月龄&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-C16"&gt;&lt;span&gt;2025-02-21（周五）&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-D16"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-E16"&gt;&lt;span&gt;135流脑2/2&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-E16"&gt;&lt;span&gt;ac流脑2/2&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-F16"&gt;&lt;span&gt;自&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-G16"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-H16" align="center"&gt;&lt;span&gt;&lt;input type="checkbox"&gt;&lt;/span&gt;&lt;/td&gt;
@@ -140,16 +140,17 @@
     &lt;tr&gt;
       &lt;td rowspan="2" id="sjs-B18"&gt;&lt;span&gt;8月龄&lt;/span&gt;&lt;/td&gt;
       &lt;td rowspan="2" id="sjs-C18"&gt;&lt;span&gt;2025-04-21（周一）&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-D18"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-D18"&gt;&lt;span&gt;2025-03-28（周五）&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-E18" bgcolor="#FFC9C7"&gt;&lt;span&gt;麻腮风1/2&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-F18"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
-      &lt;td rowspan="2" id="sjs-G18"&gt;&lt;span&gt;打完隔一周 打第二针灭活乙脑（减毒乙脑免费）&lt;/span&gt;&lt;/td&gt;
-      &lt;td id="sjs-H18" align="center"&gt;&lt;span&gt;&lt;input type="checkbox"&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-F18"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-H18" align="center"&gt;&lt;span&gt;&lt;input type="checkbox" checked&gt;&lt;/span&gt;&lt;/td&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
       &lt;td id="sjs-D19"&gt;&lt;span&gt;&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-E19" bgcolor="#F2C7FF"&gt;&lt;span&gt;灭活乙脑1/4&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-F19"&gt;&lt;span&gt;自&lt;/span&gt;&lt;/td&gt;
+      &lt;td id="sjs-G18"&gt;&lt;span&gt;打完隔一周 打第二针灭活乙脑（减毒乙脑免费）&lt;/span&gt;&lt;/td&gt;
       &lt;td id="sjs-H19" align="center"&gt;&lt;span&gt;&lt;input type="checkbox"&gt;&lt;/span&gt;&lt;/td&gt;
     &lt;/tr&gt;
     &lt;tr&gt;
