--- a/f2h2h1.github.io/一些开发笔记.html
+++ b/f2h2h1.github.io/一些开发笔记.html
@@ -1157,6 +1157,89 @@ nc 理论上也可以实现，但一行代码会写得非常长
 </ul>
 </li>
 </ul>
+<h2>python 常用的库和工具</h2>
+<h3>python 常用的库</h3>
+<ul>
+<li>核心数据分析库<ul>
+<li>Pandas ：提供高效的数据结构（如 Series 和 DataFrame），支持数据清洗、转换、聚合和时间序列分析，是数据分析的基础工具 </li>
+<li>NumPy ：专注于多维数组和矩阵运算，为其他库（如 Pandas 和 SciPy）提供底层支持，适合数值计算 </li>
+<li>Matplotlib ：基础的可视化库，支持绘制折线图、柱状图、散点图等，灵活性高但语法较复杂</li>
+</ul>
+</li>
+<li>可视化工具<ul>
+<li>Seaborn ：基于 Matplotlib 的高级库，简化了统计图表的生成，如热力图、分类图等，适合快速生成美观的可视化结果 </li>
+<li>Plotly ：交互式可视化库，支持动态图表和仪表盘开发，常用于 Web 应用</li>
+</ul>
+</li>
+<li>科学计算与统计分析  <ul>
+<li>SciPy ：提供科学计算函数（如积分、优化、信号处理），结合 NumPy 使用，适合工程和数学领域 </li>
+<li>Statsmodels ：专注于统计模型（如回归分析、时间序列），适合学术研究和复杂统计分析</li>
+</ul>
+</li>
+<li>大数据处理<ul>
+<li>PySpark ：PySpark是Apache Spark的Python接口，用于大规模数据处理和分析。</li>
+</ul>
+</li>
+<li>数据获取与处理<ul>
+<li>Requests：用于网络数据抓取</li>
+<li>BeautifulSoup：从网页中提取结构化数据</li>
+</ul>
+</li>
+<li>机器学习<ul>
+<li>Torch</li>
+<li>TensorFlow</li>
+<li>Keras</li>
+<li>sklearn</li>
+</ul>
+</li>
+<li>其它<ul>
+<li>pillow 图像处理</li>
+<li>openpyxl 操作 excel</li>
+<li>Playwright 操作浏览器</li>
+<li>Pyinstaller 打包成 exe</li>
+<li>pywin32 操作windows窗口，类似于 autoit</li>
+<li>pywinauto 类似于 pywin32</li>
+</ul>
+</li>
+</ul>
+<h3>python 常用的工具</h3>
+<ul>
+<li>包的管理<ul>
+<li>easy_install</li>
+<li>pip</li>
+</ul>
+</li>
+<li>环境管理<ul>
+<li>venv
+  自 3.3 版本之后添加的官方库，自 3.6 版本之后，成为官方推荐的多环境管理工具，3.3版本之后自带的模块，只支持3.3版本之后的
+  但只能有一个 python 解释器，只能有一个 python 版本</li>
+<li>virtualenv
+  可以有多个 python 解释器，多个 python 版本可以共存，特别是 python2 和 python3</li>
+<li>virtualenvwrapper
+  用于管理 virtualenv</li>
+<li>pyenv
+  侧重于多个 python 解释器</li>
+<li>pipenv
+  pipenv 是一款比较新的包管理工具，其借鉴了 javascript 的 npm 和 PHP 的 composer 等理念，通过一个依赖描述文件 Pipfile 来安装和管理依赖
+  pipenv 其实整合了 pip 和 virtualenv 等库</li>
+<li>Anaconda
+  Anaconda通过管理工具包、开发环境、Python版本，大大简化了你的工作流程。
+  不仅可以方便地安装、更新、卸载工具包，而且安装时能自动安装相应的依赖包，
+  同时还能使用不同的虚拟环境隔离不同要求的项目。
+  安装Acaconda默认的Python是2.7；安装Acaconda3默认的Python是3.6</li>
+<li>Miniconda
+  Miniconda 是一个 Anaconda 的轻量级替代，默认只包含了 python 和 conda，但是可以通过 pip 和 conda 来安装所需要的包。
+  Miniconda 相比 Anaconda ，去掉了科学计算的相关包，更加轻量级，没有那么臃肿。可以认为是Anaconda的最小化版本，用法与Anaconda完全一致。</li>
+</ul>
+</li>
+<li>ide<ul>
+<li>PyCharm</li>
+<li>Jupyter</li>
+<li>Spyder</li>
+<li>idle</li>
+</ul>
+</li>
+</ul>
 <h2>debian 一句命令安装 docker</h2>
 <p>因为要经常部署和重装系统，所以就整理了这样一句命令，可能会因为 docker 的更新而失效，要注意修命令里的版本号</p>
 <p>如果一直安装失败，可以先设置好代理，再安装 docker</p>
