--- a/f2h2h1.github.io/在Windows下配置PHP服务器.html
+++ b/f2h2h1.github.io/在Windows下配置PHP服务器.html
@@ -307,10 +307,40 @@ sh 下的绝对路径
 <h2>Apache</h2>
 &lt;!--
 
-https，http2
+https，http2，http长连接
 目录索引，cgi，fcgi，重定向，url重写，反向代理，负载均衡，虚拟站点
 WebSocket，WebSocket Secure
 Basic认证，Digest认证
+http压缩，http缓存，伪静态，mpm（Multi-Processing Modules）
+日志文件，SSI（Server Side Includes）
+servertype 的 standalone模式 和 inetd模式
+限速
+    mod_ratelimit
+    apache 原生的限速模块没有 nginx 的好用
+
+mod_proxy
+mod_proxy_http
+mod_proxy_connect
+
+这一段加在 VirtualHost 里
+    ProxyPreserveHost On
+    # 将客户端请求转发到后端服务器
+    ProxyPass / http://localhost:3000/
+    # 将后端服务器返回的 URL 地址替换成前端域名地址，防止暴露内部地址
+    ProxyPassReverse / http://localhost:3000/
+
+
+mod_proxy_wstunnel
+mod_rewrite
+
+这一段加在 VirtualHost 里
+    RewriteEngine On
+    RewriteCond          "%{HTTPS}" "!=on"
+    RewriteRule ^/?(.*)$ https://%{HTTP_HOST}/$1 [L,R=302]
+
+
+要实现某项功能 -&gt; 需要写什么样的配置 -&gt; 这些配置依赖哪个模块
+
 
 --&gt;
 
@@ -810,6 +840,16 @@ cmd /c shutdown.bat
 timeout 2
 cmd /c startup.bat
 ```
+
+
+```
+title apache httpd
+cd C:\Users\a\dev\Apache24\bin
+httpd.exe  -t
+httpd.exe  || pause
+```
+
+
 
 加上 apache 和 nginx http 重定向到 https 的配置
 
