--- a/kexizeroing.github.io/JavaScript String, Array and Object.html
+++ b/kexizeroing.github.io/JavaScript String, Array and Object.html
@@ -763,6 +763,7 @@ const squares = new Set([1, 4, 9]);
 console.log(odds.intersection(squares)); // Set(2) { 1, 9 }
 console.log(odds.difference(squares)); // Set(3) { 3, 5, 7 }
 console.log(odds.union(squares)); // Set(6) { 1, 3, 5, 7, 9, 4 }
+console.log(squares.isSubsetOf(odds)); // false
 </code></pre>
 <h3>WeakMap</h3>
 <p>An object's presence as a key in a WeakMap does not prevent the object from being garbage collected. Every key of a WeakMap is an object. Primitive data types as keys are not allowed. WeakMap allows garbage collector to do its task but not Map. There is no such thing as a list of WeakMap keys, they are just references to another objects.</p>
