--- a/kexizeroing.github.io/Start to use Cursor and Cline.html
+++ b/kexizeroing.github.io/Start to use Cursor and Cline.html
@@ -127,3 +127,10 @@ For models, enabling Auto-select configures Cursor to select the premium model b
 <li>Terminal Operations: <code>execute_command</code>, <code>list_code_definition_names</code></li>
 <li>MCP Tools: <code>use_mcp_tool</code>, <code>access_mcp_resource</code></li>
 </ul>
+<h2>Coding agent and agent mode in GitHub Copilot</h2>
+<ul>
+<li>Agent mode: a real‑time collaborator that sits in your editor, works with you, and edits files based on your needs.</li>
+<li>Coding agent: an asynchronous teammate that lives in the cloud, takes on issues, and sends you fully tested pull requests while you do other things. <em>(Requires Copilot Pro+ or Copilot Enterprise)</em></li>
+</ul>
+<p><strong>Agent mode</strong> transforms Copilot Chat into an orchestrator of tools (<code>read_file</code>, <code>edit_file</code>, <code>run_in_terminal</code>, etc.). Give it a natural‑language goal—“add OAuth to our Flask app and write tests”—and it plans, edits files, runs the test suite, reads failures, fixes them, and loops until green. You watch the steps, intervene when you like, and keep all changes local.</p>
+<p>Where agent mode lives in the IDE, <strong>coding agent</strong> lives in your repos. Assign an issue to Copilot, and it spins up a secure cloud workspace (via GitHub Actions), figures out a plan, edits code on its own branch, runs your tests/linters, and opens a pull request tagging you for review.</p>
