--- a/yuanj.top/Matrix – a glow of ideas.html
+++ b/yuanj.top/Matrix – a glow of ideas.html
@@ -1,11 +1,11 @@
-<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/martix.md">仓库源文</a>，<a href="https://yuanj.top/martix">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/matrix.md">仓库源文</a>，<a href="https://yuanj.top/matrix">站点原文</a></h2>
 &lt;script src="https://giscus.app/client.js"
         data-repo="imjiaoyuan/imjiaoyuan.github.io"
         data-repo-id="R_kgDONrKDQg"
         data-category="Announcements"
         data-category-id="DIC_kwDONrKDQs4CmDl9"
         data-mapping="specific"
-        data-term="Matrix"
+        data-term="matrix"
         data-strict="0"
         data-reactions-enabled="0"
         data-emit-metadata="0"
